--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1075,7 +1075,7 @@ body {
   margin: 0 auto;
   padding: 0;
   grid-template-columns: repeat(3, 1fr);
-  gap: 18px;
+  column-gap: 18px;
   margin-bottom: 96px;
 }
 
