--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1170,7 +1170,7 @@ body {
 }
 
 .filter-pagination-title {
-  margin-right: 71px;
+  margin-right: 51px;
 }
 
 .pagination-select {
@@ -1184,7 +1184,7 @@ body {
 .pagination-select-control {
   width: 100%;
   padding: 14px 20px;
-  padding-right: 48px;
+  padding-right: 99px;
   background-color: #FFFFFF;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
@@ -1214,7 +1214,7 @@ body {
   display: flex;
   margin: 0 auto;
   align-items: center;
-  padding: 12px 24px;
+  justify-content: center;
   box-sizing: border-box;
   width: 60px;
   height: 60px;
