--- a/styles/styles.css
+++ b/styles/styles.css
@@ -900,7 +900,7 @@ body {
   font-size: 20px;
   line-height: 26px;
   text-align: start;
-  margin-bottom: 34px;
+  margin-bottom: 30px;
 }
 
 .catalog-filter-list {
@@ -1285,7 +1285,9 @@ body {
   height: 4px;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  top: -7px;
+  top: -3px;
+  left: 2px;
+  width: 288px;
 }
 
 .range-bar {
