--- a/styles/styles.css
+++ b/styles/styles.css
@@ -565,7 +565,8 @@ body {
 
 .breadcrumbs-item {
   position: relative;
-  margin-right: 25px;
+  font-size: 16px;
+  margin-right: 26px;
   fill: #FFFFFF;
   cursor: pointer;
 }
@@ -575,8 +576,8 @@ body {
   width: 5px;
   height: 8px;
   right: 10px;
-  top: 7px;
-  left: 20px;
+  top: 5px;
+  left: 23px;
   background-image: url(../images/right-arrow.svg);
   background-repeat: no-repeat;
   margin: 0;
@@ -887,7 +888,7 @@ body {
 
 .catalog-filter-type {
   margin: 0;
-  margin-right: 175px;
+  margin-right: 176px;
   padding: 0;
   width: 125px;
   border: 0;
@@ -939,10 +940,14 @@ body {
 
 .button-apply {
   margin: 0;
-  padding: 14px 15px;
+  /*padding: 14px 15px;*/
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   margin-bottom: 20px;
   font-size: 16px;
-  line-height: 21px;
+  line-height: 20px;
   background: #82B3D3;
   border-radius: 4px;
   min-width: 160px;
