--- a/styles/styles.css
+++ b/styles/styles.css
@@ -736,9 +736,8 @@ body {
 
 .appointment-catalog {
   width: 800px;
-  margin: 0 auto;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  text-align: center;
+  padding: 94px 200px;
 }
 
 .appointment-catalog-title {
@@ -1119,9 +1118,10 @@ body {
 .product-card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 340px;
   margin-bottom: 40px;
+  box-sizing: border-box;
+  padding: 0 20px;
 }
 
 .product-card-image-link {
@@ -1276,7 +1276,12 @@ body {
 }
 
 .range-input-min {
-  border-right: 1px;
+  border: 2px 1px 2px 2px;
+  border-radius: 4px;
+}
+
+.range-input-max {
+  border-radius: 2px 2px 2px 1px;
 }
 
 .range-input::-webkit-outer-spin-button,
