выравнивает иконки соц сетей

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -799,7 +799,7 @@ body {
 }
 
 .footer-social-link {
-  display: block;
+  display: flex;
   width: 47px;
   height: 40px;
   background-repeat: no-repeat;
