--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,7 +150,7 @@ body {
   content: "";
 }
 
-.navigation-list .navigation-item:nth-child(3) .navigation-link {
+.navigation-item:nth-child(3) .navigation-link {
   margin-right: 0;
 }
 
@@ -720,11 +720,11 @@ body {
   height: 17px;
 }
 
-.product-list .product-card:nth-child(3) .product-stars {
+.product-card:nth-child(3) .product-stars {
   width: 66px;
 }
 
-.product-list .product-card:nth-child(4) .product-stars {
+.product-card:nth-child(4) .product-stars {
   width: 42px;
 }
 
