--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,7 @@ body {
   background-image: url("../images/index-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
+  background-color: #756157;
 }
 
 .container-logo:after {
@@ -84,7 +85,7 @@ body {
   display: block;
   position: absolute;
   width: 100%;
-  height: 59px;
+  height: 57px;
   bottom: 0;
 }
 
@@ -496,6 +497,7 @@ body {
   background-size: 100% auto;
   text-align: center;
   padding: 94px 200px;
+  background-color: #756157;
 }
 
 .appointment-title {
@@ -973,6 +975,7 @@ body {
 
 .container-catalog {
   background-image: url("../images/filter-background.jpg");
+  background-color: #756157;
   background-size: cover;
   background-position: center;
   border-radius: 0;
