--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1087,6 +1087,13 @@ body {
 }
 
 .button-off {
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0;
   padding: 0;
   font-weight: 400;
@@ -1102,7 +1109,7 @@ body {
 }
 
 .button-off:focus {
-  border: 3px solid #83B3D3;
+  border: #83B3D3;
   border-radius: 4px;
 }
 
