--- a/styles/styles.css
+++ b/styles/styles.css
@@ -720,19 +720,16 @@ body {
 
 .button-detailed:hover {
   background: #615048;
-  border-radius: 4px;
   color: #FFFFFF;
 }
 
 .button-detailed:active {
-  background: #756157;
-  border-radius: 4px;
+  background-color: #756157;
   color: rgba(255, 255, 255, 0.3);
 }
 
 .button-detailed:focus {
   background: #615048;
-  border-radius: 4px;
   color: #FFFFFF;
 }
 
