--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,7 +130,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  width: 620px;
+  max-width: 620px;
   margin: 0;
   margin-bottom: 31px;
 }
@@ -138,7 +138,7 @@ body {
 .main-paragraph {
   font-size: 22px;
   line-height: 26px;
-  width: 654px;
+  max-width: 654px;
   padding: 0;
   margin: 0;
 }
