изменяет размеры текста Седона небольшой городо и 5 причин

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,6 +123,9 @@ body {
   text-align: center;
   padding-top: 63px;
   padding-bottom: 90px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-title {
@@ -130,7 +133,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  max-width: 620px;
+  width: 630px;
   margin: 0;
   margin-bottom: 31px;
 }
@@ -138,7 +141,7 @@ body {
 .main-paragraph {
   font-size: 22px;
   line-height: 26px;
-  max-width: 654px;
+  width: 660px;
   padding: 0;
   margin: 0;
 }
