--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1172,12 +1172,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 290px;
+  box-sizing: border-box;
 }
 
 .select-control {
   width: 100%;
   padding: 14px 20px;
-  padding-right: 48px;
   background-color: #FFFFFF;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
@@ -1187,7 +1187,7 @@ body {
   font: inherit;
   background-image: url("../images/down-arrow.svg");
   background-repeat: no-repeat;
-  background-position: right 21px center;
+  background-position: right 18px center;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -1221,6 +1221,9 @@ body {
   height: 48px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
+  box-sizing: border-box;
+  padding: 14px 12px;
+  margin: 0;
 }
 
 .filter-menu .button:not(:last-child) {
@@ -1254,7 +1257,8 @@ body {
 
 .filter-menu-title {
   margin: 0;
-  padding: 0;
+  padding-top: 8px;
+  padding-bottom: 5px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
