--- a/styles/styles.css
+++ b/styles/styles.css
@@ -500,19 +500,15 @@ body {
 
 .button-search:hover {
   background: #615048;
-  border-radius: 4px;
   color: #FFFFFF;
 }
 
 .button-search:active {
-  background: #756157;
-  border-radius: 4px;
-  color: rgba(255, 255, 255, 0.3);
+  opacity: 0.3;
 }
 
 .button-search:focus {
   background: #615048;
-  border-radius: 4px;
   color: #FFFFFF;
 }
 
